--- a/app/_templates/footer.twig
+++ b/app/_templates/footer.twig
@@ -3,56 +3,8 @@
 	<section class="fast-connect">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
-					<h3 class="block-title"> Stay Connected</h3>
-					<p class="block-desc">Join over 3000 people who receive rental advice and best property deals</p>
-					<form>
-						<div class="form-group input-btn">
-							<input type="email" name="" placeholder="Your email" />
-							<button><i class="fa fa-angle-right"></i></button>
-						</div>
-					</form>
-					<div class="social">
-						<a href="#" class="icon-circle"><i class="fa fa-phone"></i></a>
-						<a href="#" class="icon-circle"><i class="fa fa-envelope"></i></a>
-						<a href="#" class="icon-circle"><i class="fa fa-facebook"></i></a>
-						<a href="#" class="icon-circle"><i class="fa fa-youtube"></i></a>
-					</div>
-
-				</div>	
-				<div class="col-md-3">
-
-					<h3 class="block-title">Company</h3>
-					<ul class="block-list">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Careers</a></li>
-					</ul>
-
-					<h3 class="block-title">Support</h3>
-					<ul class="block-list">
-						<li><a href="#">FAQs</a></li>
-						<li><a href="#">What is Veried Account</a></li>
-						<li><a href="#">What is Veried Listing</a></li>
-						<li><a href="#">Private Policy</a></li>
-						<li><a href="#">Tearms and Conditions</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3">
-
-					<h3 class="block-title">Project</h3>
-					<ul class="block-list">
-						<li><a href="#">Saigon Pearl</a></li>
-						<li><a href="#">Tropic Garden</a></li>
-						<li><a href="#">Sunrise City</a></li>
-						<li><a href="#">RiverPark Residence</a></li>
-						<li><a href="#">Starhill</a></li>
-						<li><a href="#">Galaxy 9</a></li>
-					</ul>
-					<a href="#" class="btn btn--blue btn--small">View all</a>
-
-				</div>
-				<div class="col-md-3">
-					<h3 class="block-title">Preferences</h3>
+				<div class="col-md-3 order-md-last">
+					<h3 class="block-title hide-for-small">Preferences</h3>
 					<div class="form-group">
 						<select class="form-control" id="exampleFormControlSelect1">
 							<option disabled="disabled"  selected="selected" >Languague English</option>
@@ -72,11 +24,62 @@
 						</select>
 					</div>
 				</div>
+				<div class="col-md-3">
+					<div class="hide-for-small">
+						<h3 class="block-title"> Stay Connected</h3>
+						<p class="block-desc">Join over 3000 people who receive rental advice and best property deals</p>
+						<form>
+							<div class="form-group input-btn">
+								<input type="email" name="" placeholder="Your email" />
+								<button><i class="fa fa-angle-right"></i></button>
+							</div>
+						</form>
+					</div>
+					<div class="social">
+						<a href="#" class="icon-circle"><i class="fa fa-phone"></i></a>
+						<a href="#" class="icon-circle"><i class="fa fa-envelope"></i></a>
+						<a href="#" class="icon-circle"><i class="fa fa-facebook"></i></a>
+						<a href="#" class="icon-circle"><i class="fa fa-youtube"></i></a>
+					</div>
+
+				</div>	
+				<div class="col-md-3 hide-for-small" >
+
+					<h3 class="block-title">Company</h3>
+					<ul class="block-list">
+						<li><a href="#">About</a></li>
+						<li><a href="#">Careers</a></li>
+					</ul>
+
+					<h3 class="block-title">Support</h3>
+					<ul class="block-list">
+						<li><a href="#">FAQs</a></li>
+						<li><a href="#">What is Veried Account</a></li>
+						<li><a href="#">What is Veried Listing</a></li>
+						<li><a href="#">Private Policy</a></li>
+						<li><a href="#">Tearms and Conditions</a></li>
+					</ul>
+				</div>
+				<div class="col-md-3 hide-for-small">
+
+					<h3 class="block-title">Project</h3>
+					<ul class="block-list">
+						<li><a href="#">Saigon Pearl</a></li>
+						<li><a href="#">Tropic Garden</a></li>
+						<li><a href="#">Sunrise City</a></li>
+						<li><a href="#">RiverPark Residence</a></li>
+						<li><a href="#">Starhill</a></li>
+						<li><a href="#">Galaxy 9</a></li>
+					</ul>
+					<a href="#" class="btn btn--blue btn--small">View all</a>
+
+				</div>
+				
 			</div>
 		</div>
 	</section>
 
-	<section class="quick-link">
+	<section class="quick-link hide-for-small">
 		<div class="thumb-slide carousel slide container" data-module="LinkSlide">
 			<h2 class="block-title">Quick links</h2>
 
