--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -35,7 +35,7 @@ header {
 }
 .wrapper-inputtags {
   @include absolute(top 50% left 12%);
-  border:1px solid #333;
+  border:1px solid #aaa;
   background: #fff;
   padding: 0px;
   height: 45px;
@@ -189,6 +189,7 @@ nav {
     width: 100%;
     opacity: 1;
     width:100%;
+    height: auto;
     @include absolute(top 50px left);
 
     li {
@@ -258,7 +259,7 @@ nav {
     transform: translateX(40px);
     opacity: 0;
     transition: all 0.2s ease-out 0.05s;
-    border-bottom: 1px solid #80c6a2;
+    border-bottom: 1px solid $blue;
     @include screen(medium,false){
       br {
         display: none;
