--- a/app/listing.twig
+++ b/app/listing.twig
@@ -95,7 +95,7 @@
 <section class="listing-detail" data-module="ScrollTo"> 
   <div class="container">
 
-    <div class="breadcrumb">
+    <div class="breadcrumb hide-for-small">
       <a href="#"><i class="fa fa-home"></i></a>  
       <i class="fa fa-angle-right"></i> 
       <a href="#">District 7</a> <i class="fa fa-angle-right"></i> 
@@ -103,23 +103,23 @@
     </div>
 
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-8 ">
 
-        <ul class="tab-link">
+        <ul class="tab-link hide-for-small">
           <li class="active"><a href="javascript:void(0);" class="link-to" data-target="#overview"> Overview</a></li>
           <li><a href="javascript:void(0);" class="link-to" data-target="#policy"> Policy</a></li>
           <li><a href="javascript:void(0);" class="link-to" data-target="#amenities"> Amenities</a></li>
           <li><a href="javascript:void(0);" class="link-to" data-target="#facilities"> Facilities</a></li>
         </ul>
-        <hr />
+        <hr class="hide-for-small" />
 
         <div class="list-content">
+
+          <h2> Resort - like new Apartment in Starhill district 7</h2>
           <div class="house-code">
             h012345
             <span>House Code</span>
           </div>
-
-          <h2> Resort - like new Apartment in Starhill district 7</h2>
           <p class="locate"><i class="fa fa-map-marker"></i> District 7</p>
 
           <h3 class="block-title"> Overview</h3>
@@ -132,7 +132,7 @@
             <li><i class="fa fa-umbrella"></i> 1 Fullu Funished(s)</li>  
           </ul>
 
-          <ul class="gallery-house row">
+          <ul class="gallery-house row hide-for-small">
             <li class="col-md-2"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img1.jpg" alt=""></a></li>
             <li class="col-md-2"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img2.jpg" alt=""></a></li>
             <li class="col-md-2"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img3.jpg" alt=""></a></li>
@@ -210,7 +210,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 hide-for-small">
         <div class="block-signup">
           <span class="logo-icon"></span>
           <p><b>$1,200</b> per month</p>
@@ -330,7 +330,7 @@
 
       <h2 class="section-title">Similar Listings</h2>
       <div class="row">
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
@@ -352,7 +352,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
@@ -374,7 +374,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
@@ -396,7 +396,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
@@ -427,7 +427,7 @@
 
       <h2 class="section-title">Newly-added Listings</h2>
       <div class="row">
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
@@ -449,7 +449,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
@@ -471,7 +471,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
@@ -493,7 +493,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 thumb-item">
+        <div class="col-6 col-md-3 thumb-item">
           <div class="thumb-gallery">
             <div class="thumb-slide" data-module="ThumbSlide">
               <ul class="thumb-img slider-wrapper">
