--- a/app/project.twig
+++ b/app/project.twig
@@ -20,20 +20,20 @@
 
 <section class="list-feature">
 	<div class="container">
-		<div class="breadcrumb">
+		<div class="breadcrumb  hide-for-small">
 			<a href="#"><i class="fa fa-home"></i></a>  
 			<i class="fa fa-angle-right"></i> 
 			<a href="#">District 7</a> <i class="fa fa-angle-right"></i> Starhill
 		</div>
 
-		<ul class="tab-link" data-module="ScrollTo">
+		<ul class="tab-link  hide-for-small" data-module="ScrollTo">
 			<li class="active"><a href="javascript:void(0);" class="link-to" data-target="#description"> Description</a></li>
 			<li><a href="javascript:void(0);" class="link-to" data-target="#overview"> Overview</a></li>
 			<li><a href="javascript:void(0);" class="link-to" data-target="#facilities"> Facilities</a></li>
 			<li><a href="javascript:void(0);" class="link-to" data-target=".map-detail"> Location</a></li>
 			<li><a href="javascript:void(0);" class="link-to" data-target=".list-table"> Listing</a></li>
 		</ul>
-		<hr />
+		<hr class="hide-for-small" />
 
 		<h2 class="section-title">Feature Listings in Standhills</h2>
 		<div class="row">
