--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -90,10 +90,66 @@ header {
   }
 }
 
+.box-suggest {
+  height: 0;
+  opacity: 0;
+  padding: 30px;
+  background: #fff;
+  @include absolute(top 100% left);
+  width: 100%;
+  h3 {
+    color: #333;
+    margin: 10px 0;
+  }
+}
+.suggest-list {
+  li {
+    position: relative;
+    padding-left: 25px;
+    margin-bottom: 5px;
+    &:before {
+      content: "";
+      position: absolute;
+      top: 2px;
+      left: 0;
+      color: #999;
+      display: block;
+      font: normal normal normal 18px/1 FontAwesome;
+    }
+    a {
+      display: block;
+    }
+  }
+}
+.list-recent {
+  li {
+    &:before {
+      content: "\f017";
+
+    }
+  }
+}
+.list-place {
+  li {
+    &:before {
+      content: "\f041";
+
+    }
+  }
+}
+.suggest__quick {
+  a {
+    border:1px solid;
+    margin-right: 20px;
+    padding: 5px 10px;
+    display: inline-block;
+  }
+
+}
 
 .form-wrapper {
   position: relative;
-  padding: 1px 35px;
+  padding: 5px 35px;
 
   > .bootstrap-tagsinput {
     padding: 3px 5px;
@@ -101,9 +157,30 @@ header {
     border-radius: 3px;
   }
 }
+.phone-number {
+  &:hover {
+    @include screen(medium){
+      background: $blue !important;
+      a {
+        color: #fff;
+        border:none;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
 #searchHeader {
   @extend .hide-for-small;
+  &:hover {
+    @include screen(medium){
+      .box-suggest {
+        height: auto;
+        opacity: 1;
+      }
+    }
 
+  }
   .collapse.show {
     display: inline-block;
   }
@@ -211,6 +288,7 @@ nav {
     a{
       transform:translate(0,0);
       opacity: 1;
+      background: #fff; 
       padding: 0 10px;
     }
   }
